formatting cleanUp